--- a/UI Design/src/UI_Pages/UserDashboard.form
+++ b/UI Design/src/UI_Pages/UserDashboard.form
@@ -341,7 +341,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="EXIT"/>
+                <Property name="text" type="java.lang.String" value="CLOSE"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton7ActionPerformed"/>
