--- a/UI Design/src/UI_Pages/UserDashboard.form
+++ b/UI Design/src/UI_Pages/UserDashboard.form
@@ -254,6 +254,9 @@
                     </Property>
                     <Property name="text" type="java.lang.String" value="SHARE"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton6ActionPerformed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
