Recover functionality added

--- a/UI Design/src/UI_Pages/AdminDashboard.form
+++ b/UI Design/src/UI_Pages/AdminDashboard.form
@@ -300,6 +300,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="RECOVER"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
